--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DATABASE_ACCESS = "mongodb+srv://dbradford1337:seabiscuit@cluster0.4cdr6.mongodb.net/myTable?retryWrites=true&w=majority"
+ATLAS_URI=mongodb+srv://dbradford1337:seabiscuit@cluster0.4cdr6.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
