--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "font-awesome": "^4.7.0",
     "joi-browser": "^13.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
