--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
+    "toastify": "^2.0.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
