--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "font-awesome": "^4.7.0",
     "joi-browser": "^13.4.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^5.12.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
